--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "d3": "^7.6.1",
     "highcharts": "^10.2.1",
+    "plotly.js-dist": "^2.14.0",
+    "plotly.js-dist-min": "^2.14.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "@vue/cli-plugin-babel": "~4.5.12",
     "@vue/cli-plugin-router": "~4.5.12",
     "@vue/cli-service": "~4.5.12",
