--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vue/cli-plugin-babel": "~4.5.12",
     "@vue/cli-plugin-router": "~4.5.12",
     "@vue/cli-service": "~4.5.12",
+    "csv-loader": "^3.0.5",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.0",
