--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.6.5",
     "d3": "^7.6.1",
     "highcharts": "^10.2.1",
+    "is-mobile": "^3.1.1",
     "plotly.js-dist": "^2.14.0",
     "plotly.js-dist-min": "^2.14.0",
     "vue": "^2.6.11",
